--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   margin: 2rem auto;
 }
 
+/* Header */
 .todo-header {
   padding: .5rem;
   border-bottom: 1px solid #2c3035;
@@ -13,4 +14,61 @@
 }
 .todo-header h1 {
   margin: 0;
+}
+
+/* Form */
+.todo-form {
+  padding: 1rem;
+  margin: 0 2rem;
+  border-bottom: 1px solid #2c3035;
+}
+
+/* Form content */
+.todo-form h2,
+.todo-list h2 {
+  text-align: center;
+  margin-top: 0;
+}
+
+.form-control {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+.form-control label {
+  font-weight: bold;
+  font-size: .7rem;
+  margin-bottom: .4rem;
+}
+
+.form-control input {
+  background-color: #2c3035;
+  border: 1px solid #222;
+  border-radius: 2px;
+  color: #dfdfdf;
+  padding: .5rem;
+}
+
+button,
+input[type="submit"] {
+  background-color: #333;
+  border: 1px solid #222;
+  border-radius: 5px;
+  color: #eee;
+  cursor: pointer;
+  display: block;
+  padding: .8rem;
+  width: 100%;
+
+  outline: none;
+  transition: .2s;
+}
+button:hover,
+input[type="submit"]:hover {
+  background-color: #222;
+}
+button:focus,
+input[type="submit"]:focus {
+  box-shadow: 0 0 2px 4px #2e2e2e;
 }
